Bug 19812 - _stp_target misdirected for pid_namespace containers
Summary: _stp_target misdirected for pid_namespace containers
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: runtime (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-11 19:25 UTC by Frank Ch. Eigler
Modified: 2016-03-16 12:49 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments
unpolished patch that seems to work for me (459 bytes, patch)
2016-03-14 14:43 UTC, Martin Cermak
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Ch. Eigler 2016-03-11 19:25:05 UTC
If staprun -c CMD or -x PID is invoked from within a container (even if privileged), but without --pid=host, the pid# passed in the STP_START message will reflect the container's namespace.  This needs to be converted to a host namespace pid, for inode-uprobes etc. to work.

runtime/transport/transport.c line 151

00151                 _stp_target = st->target;
Comment 1 Martin Cermak 2016-03-14 14:43:24 UTC
Created attachment 9094 [details]
unpolished patch that seems to work for me
Comment 2 Martin Cermak 2016-03-16 12:49:50 UTC
Fixed in commit 9546970a2fcc06a433ea067833ee95ff74c564ce.